# cocoapods-bazel

./: .gitattributes  .gitignore  .rubocop.yml  .rubocop_todo.yml  CHANGELOG.md  Gemfile  README.md  Rakefile  cocoapods-bazel.gemspec
.github/workflows/: PR.yml  master.yml  tests.yml
lib/: cocoapods_plugin.rb
lib/cocoapods/: bazel.rb
lib/cocoapods/bazel/: build_file.rb  config.rb  exportFile.rb  target.rb  util.rb  version.rb  xcconfig_resolver.rb
spec/: integration.rb  spec_helper.rb
spec/cocoapods/bazel/: util_spec.rb  xcconfig_resolver_spec.rb
spec/integration/: .gitignore
spec/integration/experimental_features/: spec.yml
spec/integration/experimental_features/after/: WORKSPACE  rules.bzl
spec/integration/experimental_features/after/Frameworks/CustomHeaderSearchPaths/: BUILD.bazel
spec/integration/experimental_features/after/Frameworks/DuplicatedSrcs/: BUILD.bazel
spec/integration/experimental_features/after/Frameworks/EsotericGlobs/: BUILD.bazel
spec/integration/experimental_features/after/Frameworks/Firebase/: BUILD.bazel
spec/integration/experimental_features/after/Frameworks/ReachabilitySwift/: BUILD.bazel
spec/integration/experimental_features/after/Frameworks/SelectPerConfigWithSharedDeps/: BUILD.bazel
spec/integration/experimental_features/after/Frameworks/SelectPerConfigWithoutSharedDeps/: BUILD.bazel
spec/integration/experimental_features/after/Frameworks/SwiftBridgingHeader/: BUILD.bazel
spec/integration/experimental_features/after/Frameworks/a/: BUILD.bazel
spec/integration/experimental_features/after/Frameworks/b/: BUILD.bazel
spec/integration/experimental_features/after/Frameworks/c/: BUILD.bazel
spec/integration/experimental_features/after/Frameworks/d/: BUILD.bazel
spec/integration/experimental_features/after/Frameworks/e/: BUILD.bazel
spec/integration/experimental_features/after/Frameworks/f/: BUILD.bazel
spec/integration/experimental_features/after/Frameworks/g/: BUILD.bazel
spec/integration/experimental_features/before/: Podfile
spec/integration/experimental_features/before/Frameworks/EsotericGlobs/: EsotericGlobs.podspec
spec/integration/experimental_features/before/Frameworks/ExcludedPod/: ExcludedPod.podspec
spec/integration/experimental_features/before/Frameworks/Firebase/: FirebaseCrashlytics.podspec  FirebaseRemoteConfigSwift.podspec
spec/integration/experimental_features/before/Frameworks/a/: A.podspec
spec/integration/monorepo/: spec.yml
spec/integration/monorepo/after/: WORKSPACE  bazel-after  bazel-bin  bazel-out  bazel-testlogs
spec/integration/monorepo/after/Frameworks/CustomHeaderSearchPaths/: BUILD.bazel
spec/integration/monorepo/after/Frameworks/EsotericGlobs/: BUILD.bazel
spec/integration/monorepo/after/Frameworks/GlobExpansion/: BUILD.bazel
spec/integration/monorepo/after/Frameworks/ReachabilitySwift/: BUILD.bazel
spec/integration/monorepo/after/Frameworks/SelectPerConfigWithSharedDeps/: BUILD.bazel
spec/integration/monorepo/after/Frameworks/SelectPerConfigWithoutSharedDeps/: BUILD.bazel
spec/integration/monorepo/after/Frameworks/a/: BUILD.bazel
spec/integration/monorepo/after/Frameworks/b/: BUILD.bazel
spec/integration/monorepo/after/Frameworks/c/: BUILD.bazel
spec/integration/monorepo/after/Frameworks/d/: BUILD.bazel
spec/integration/monorepo/after/Frameworks/e/: BUILD.bazel
spec/integration/monorepo/after/Frameworks/f/: BUILD.bazel
spec/integration/monorepo/after/Frameworks/g/: BUILD.bazel
spec/integration/monorepo/before/: BUILD.bazel  Podfile  WORKSPACE
spec/integration/monorepo/before/Frameworks/CustomHeaderSearchPaths/: CustomHeaderSearchPaths.podspec
spec/integration/monorepo/before/Frameworks/CustomHeaderSearchPaths/Sources/: PublicClass.m
spec/integration/monorepo/before/Frameworks/DuplicatedSrcs/: DuplicateSrcs.podspec
spec/integration/monorepo/before/Frameworks/EsotericGlobs/: EsotericGlobs.podspec
spec/integration/monorepo/before/Frameworks/EsotericGlobs/App/: main.swift
spec/integration/monorepo/before/Frameworks/EsotericGlobs/Sources/: EGFunctions.m
spec/integration/monorepo/before/Frameworks/EsotericGlobs/Sources/Private/: EGPrivate.h
spec/integration/monorepo/before/Frameworks/EsotericGlobs/Sources/Public/: EGFunctions.h
spec/integration/monorepo/before/Frameworks/Firebase/: Firebase.podspec  FirebaseCore.podspec  FirebaseRemoteConfig.podspec
spec/integration/monorepo/before/Frameworks/GlobExpansion/: GlobExpansion.podspec
spec/integration/monorepo/before/Frameworks/SelectPerConfigWithSharedDeps/Sources/: with_shared_deps.h
spec/integration/monorepo/before/Frameworks/SelectPerConfigWithoutSharedDeps/: SelectPerConfigWithoutSharedDeps.podspec
spec/integration/monorepo/before/Frameworks/SelectPerConfigWithoutSharedDeps/Sources/: without_shared_deps.swift
spec/integration/monorepo/before/Frameworks/SelectPerConfigWithoutSharedDeps/Sources/Internal/: without_shared_deps_Internal.h
spec/integration/monorepo/before/Frameworks/SwiftBridgingHeader/: SwiftBridgingHeader.podspec
spec/integration/monorepo/before/Frameworks/SwiftBridgingHeader/App/: BridgingHeader.h
spec/integration/monorepo/before/Frameworks/SwiftBridgingHeader/Sources/: a.h  a.m
spec/integration/monorepo/before/Frameworks/UsingPodEnvVars/: UsingPodEnvVars.podspec
spec/integration/monorepo/before/Frameworks/WithResources/: WithResources.podspec
spec/integration/monorepo/before/Frameworks/a/: A.podspec
spec/integration/monorepo/before/Frameworks/b/: B.podspec
spec/integration/monorepo/before/Frameworks/c/: C.podspec
spec/integration/monorepo/before/Frameworks/c/Sources/: c.swift
spec/integration/monorepo/before/Frameworks/d/: D.podspec
spec/integration/monorepo/before/Frameworks/e/: E.podspec
spec/integration/monorepo/before/Frameworks/f/: F.podspec
spec/integration/monorepo/before/Frameworks/g/: G.podspec
spec/integration/release-build/: spec.yml
spec/integration/release-build/after/Frameworks/a/: BUILD.bazel
spec/integration/release-build/before/: Podfile
spec/spec_helper/: prepare_spec_repos.rb
(+31 files in other folders)
