load(
    "//:rules.bzl",
    "apple_framework",
    "ios_application",
)

apple_framework(
    name = "EsotericGlobs",
    srcs = glob([
        "Sources/**/*.m",
        "Sources/**/*.h",
    ]),
    platforms = {"ios": "9.0"},
    private_headers = glob(["Sources/Private/*.h"]),
    public_headers = glob(["Sources/Public/*.h"]),
    visibility = ["//visibility:public"],
)

ios_application(
    name = "EsotericGlobs-App",
    srcs = glob(["App/main.swift"]),
    bundle_id = "org.cocoapods.EsotericGlobs-App",
    families = [
        "iphone",
        "ipad",
    ],
    minimum_os_version = "9.0",
    module_name = "EsotericGlobs_App",
    swift_version = "5.2",
    visibility = ["//visibility:public"],
    deps = [":EsotericGlobs.lib"],
)
