load(
    "//:rules.bzl",
    "apple_framework",
    "ios_application",
    "ios_unit_test",
)

apple_framework(
    name = "SelectPerConfigWithoutSharedDeps",
    srcs = glob([
        "Sources/**/*.h",
        "Sources/**/*.m",
        "Sources/**/*.swift",
    ]),
    platforms = {"ios": "9.0"},
    private_headers = glob(["Sources/Internal/**/*.h"]),
    swift_version = "5.2",
    visibility = ["//visibility:public"],
    deps = select({
        "//Pods/cocoapods-bazel:deps_debug": ["//Pods/OnlyPre:OnlyPre.lib"],
        "//Pods/cocoapods-bazel:deps_release": ["//Frameworks/d:D.lib"],
        "//Pods/cocoapods-bazel:deps_debug_and_release": [
            "//Frameworks/d:D.lib",
            "//Pods/OnlyPre:OnlyPre.lib",
        ],
    }),
)

ios_unit_test(
    name = "SelectPerConfigWithoutSharedDeps-Unit-Tests",
    srcs = glob([
        "Tests/**/*.m",
        "Tests/**/*.swift",
    ]),
    minimum_os_version = "9.0",
    module_name = "SelectPerConfigWithoutSharedDeps_Unit_Tests",
    swift_version = "5.2",
    deps = [":SelectPerConfigWithoutSharedDeps.lib"],
)

ios_application(
    name = "SelectPerConfigWithoutSharedDeps-App",
    srcs = glob(["App/**/*.swift"]),
    bundle_id = "org.cocoapods.SelectPerConfigWithoutSharedDeps-App",
    families = [
        "iphone",
        "ipad",
    ],
    minimum_os_version = "9.0",
    module_name = "SelectPerConfigWithoutSharedDeps_App",
    swift_version = "5.2",
    visibility = ["//visibility:public"],
    deps = [":SelectPerConfigWithoutSharedDeps.lib"],
)
