load("@build_bazel_rules_ios//rules:app.bzl", "ios_application")
load("@build_bazel_rules_ios//rules:framework.bzl", "apple_framework")
load("@build_bazel_rules_ios//rules:test.bzl", "ios_unit_test")

apple_framework(
    name = "SwiftBridgingHeader",
    srcs = glob([
        "Sources/**/*.h",
        "Sources/**/*.m",
        "Sources/**/*.swift",
    ]),
    platforms = {"ios": "9.0"},
    private_headers = glob(["Sources/Internal/**/*.h"]),
    swift_version = "5.2",
    visibility = ["//visibility:public"],
)

ios_unit_test(
    name = "SwiftBridgingHeader-Unit-Tests",
    srcs = glob([
        "Tests/**/*.m",
        "Tests/**/*.swift",
    ]),
    minimum_os_version = "9.0",
    module_name = "SwiftBridgingHeader_Unit_Tests",
    swift_objc_bridging_header = "Tests/BridgingHeader.h",
    swift_version = "5.2",
    xcconfig = {"SWIFT_OBJC_BRIDGING_HEADER": "Tests/BridgingHeader.h"},
    deps = [":SwiftBridgingHeader"],
)

ios_application(
    name = "SwiftBridgingHeader-App",
    srcs = glob([
        "App/**/*.m",
        "App/**/*.swift",
    ]),
    bundle_id = "org.cocoapods.SwiftBridgingHeader-App",
    families = [
        "iphone",
        "ipad",
    ],
    minimum_os_version = "9.0",
    module_name = "SwiftBridgingHeader_App",
    swift_objc_bridging_header = "App/BridgingHeader.h",
    swift_version = "5.2",
    visibility = ["//visibility:public"],
    xcconfig = {"SWIFT_OBJC_BRIDGING_HEADER": "App/BridgingHeader.h"},
    deps = [":SwiftBridgingHeader"],
)
