load(
    "//:rules.bzl",
    "apple_framework",
    "ios_application",
    "ios_unit_test",
)

apple_framework(
    name = "SwiftBridgingHeader",
    srcs = glob([
        "Sources/**/*.h",
        "Sources/**/*.m",
        "Sources/**/*.swift",
    ]),
    platforms = {"ios": "9.0"},
    swift_version = "5.2",
    visibility = ["//visibility:public"],
)

ios_unit_test(
    name = "SwiftBridgingHeader-Unit-Tests",
    srcs = glob([
        "Tests/**/*.h",
        "Tests/**/*.m",
        "Tests/**/*.swift",
    ]),
    minimum_os_version = "9.0",
    module_name = "SwiftBridgingHeader_Unit_Tests",
    swift_objc_bridging_header = "Tests/BridgingHeader.h",
    swift_version = "5.2",
    xcconfig = {"SWIFT_OBJC_BRIDGING_HEADER": "Tests/BridgingHeader.h"},
    deps = [":SwiftBridgingHeader.lib"],
)

ios_application(
    name = "SwiftBridgingHeader-App",
    srcs = glob([
        "App/**/*.h",
        "App/**/*.swift",
    ]),
    bundle_id = "org.cocoapods.SwiftBridgingHeader-App",
    families = [
        "iphone",
        "ipad",
    ],
    minimum_os_version = "9.0",
    module_name = "SwiftBridgingHeader_App",
    swift_objc_bridging_header = "App/BridgingHeader.h",
    swift_version = "5.2",
    visibility = ["//visibility:public"],
    xcconfig = {"SWIFT_OBJC_BRIDGING_HEADER": "App/BridgingHeader.h"},
    deps = [":SwiftBridgingHeader.lib"],
)
