load(
    "//:rules.bzl",
    "apple_framework",
    "ios_application",
    "ios_unit_test",
)

apple_framework(
    name = "C",
    srcs = glob([
        "Sources/**/*.h",
        "Sources/**/*.m",
        "Sources/**/*.swift",
    ]),
    platforms = {"ios": "11.0"},
    private_headers = glob(["Sources/Internal/**/*.h"]),
    swift_version = "5.2",
    visibility = ["//visibility:public"],
    deps = [
        "//Frameworks/a:A.lib",
        "//Frameworks/b:B.lib",
        "//Pods/OneTrust-CMP-XCFramework:OneTrust-CMP-XCFramework.lib",
    ],
)

ios_unit_test(
    name = "C-Unit-Tests",
    srcs = glob([
        "Tests/**/*.m",
        "Tests/**/*.swift",
    ]),
    minimum_os_version = "11.0",
    module_name = "C_Unit_Tests",
    swift_version = "5.2",
    deps = [":C.lib"],
)

ios_application(
    name = "C-App",
    srcs = glob(["App/**/*.swift"]),
    bundle_id = "org.cocoapods.C-App",
    families = [
        "iphone",
        "ipad",
    ],
    minimum_os_version = "11.0",
    module_name = "C_App",
    swift_version = "5.2",
    visibility = ["//visibility:public"],
    deps = [":C.lib"],
)
