load(
    "//:rules.bzl",
    "apple_framework",
    "ios_application",
    "ios_unit_test",
)

apple_framework(
    name = "D",
    srcs = glob([
        "Sources/**/*.h",
        "Sources/**/*.m",
        "Sources/**/*.swift",
    ]),
    platforms = {"ios": "11.0"},
    private_headers = glob(["Sources/Internal/**/*.h"]),
    swift_version = "5.2",
    visibility = ["//visibility:public"],
    deps = [
        "//Frameworks/a:A.lib",
        "//Frameworks/c:C.lib",
        "//Pods/Public:Public.lib",
    ],
)

ios_unit_test(
    name = "D-Unit-Tests",
    srcs = glob([
        "Tests/**/*.m",
        "Tests/**/*.swift",
    ]),
    minimum_os_version = "11.0",
    module_name = "D_Unit_Tests",
    swift_version = "5.2",
    test_host = ":D-App.lib",
    deps = [
        ":D.lib",
        "//Frameworks/e:E.lib",
    ],
)

ios_application(
    name = "D-App",
    srcs = glob(["App/**/*.swift"]),
    bundle_id = "org.cocoapods.D-App",
    families = ["ipad"],
    minimum_deployment_os_version = "11.0",
    minimum_os_version = "9.0",
    module_name = "D_App",
    swift_version = "5.2",
    visibility = ["//visibility:public"],
    xcconfig = {
        "TARGETED_DEVICE_FAMILY": "2",
        "SWIFT_PLATFORM_TARGET_PREFIX": "ios",
        "SWIFT_DEPLOYMENT_TARGET": "9.0",
        "LLVM_TARGET_TRIPLE_OS_VERSION": "ios9.0",
    },
    deps = [":D.lib"],
)
