load(
    "//:rules.bzl",
    "apple_framework",
    "ios_unit_test",
)

apple_framework(
    name = "E",
    srcs = glob([
        "Sources/**/*.h",
        "Sources/**/*.m",
        "Sources/**/*.swift",
    ]),
    platforms = {"ios": "11.0"},
    private_headers = glob(["Sources/Internal/**/*.h"]),
    swift_version = "5.2",
    visibility = ["//visibility:public"],
    deps = [
        "//Frameworks/a:A.lib",
        "//Frameworks/c:C.lib",
    ],
)

ios_unit_test(
    name = "E-Unit-Tests",
    srcs = glob([
        "Tests/**/*.m",
        "Tests/**/*.swift",
    ]),
    minimum_os_version = "11.0",
    module_name = "E_Unit_Tests",
    swift_version = "5.2",
    deps = [":E.lib"],
)
