load(
    "//:rules.bzl",
    "apple_framework",
    "ios_application",
    "ios_unit_test",
)

apple_framework(
    name = "F",
    srcs = glob([
        "Sources/**/*.h",
        "Sources/**/*.m",
        "Sources/**/*.swift",
    ]),
    platforms = {"ios": "11.0"},
    private_headers = glob(["Sources/Internal/**/*.h"]),
    swift_version = "5.2",
    visibility = ["//visibility:public"],
    deps = [
        "//Frameworks/c:C.lib",
        "//Pods/OnlyPre:OnlyPre.lib",
    ],
)

ios_unit_test(
    name = "F-Unit-Tests",
    srcs = glob([
        "Tests/**/*.m",
        "Tests/**/*.swift",
    ]),
    minimum_os_version = "11.0",
    module_name = "F_Unit_Tests",
    swift_version = "5.2",
    deps = [":F.lib"],
)

ios_application(
    name = "F-App",
    srcs = glob(["App/**/*.swift"]),
    bundle_id = "org.cocoapods.F-App",
    families = [
        "iphone",
        "ipad",
    ],
    minimum_os_version = "11.0",
    module_name = "F_App",
    swift_version = "5.2",
    visibility = ["//visibility:public"],
    deps = [":F.lib"],
)
