load(
    "//:rules.bzl",
    "apple_framework",
    "ios_application",
    "ios_unit_test",
)

apple_framework(
    name = "G",
    srcs = glob([
        "Sources/**/*.h",
        "Sources/**/*.m",
        "Sources/**/*.swift",
    ]),
    platforms = {"ios": "11.0"},
    private_headers = glob(["Sources/Internal/**/*.h"]),
    swift_version = "5.2",
    visibility = ["//visibility:public"],
    deps = [
        "//Pods/OnlyPre:OnlyPre.lib",
        "//Pods/Public:Public.lib",
    ],
)

ios_unit_test(
    name = "G-Unit-Tests",
    srcs = glob([
        "Tests/**/*.m",
        "Tests/**/*.swift",
    ]),
    minimum_os_version = "11.0",
    module_name = "G_Unit_Tests",
    swift_version = "5.2",
    deps = [":G.lib"],
)

ios_application(
    name = "G-App",
    srcs = glob(["App/**/*.swift"]),
    bundle_id = "org.cocoapods.G-App",
    families = [
        "iphone",
        "ipad",
    ],
    minimum_os_version = "11.0",
    module_name = "G_App",
    swift_version = "5.2",
    visibility = ["//visibility:public"],
    deps = [
        ":G.lib",
        "//Frameworks/a:A.lib",
    ],
)
