load("@build_bazel_rules_ios//rules:app.bzl", "ios_application")
load("@build_bazel_rules_ios//rules:framework.bzl", "apple_framework")
load("@build_bazel_rules_ios//rules:test.bzl", "ios_unit_test")

apple_framework(
    name = "B",
    srcs = glob([
        "Sources/**/*.h",
        "Sources/**/*.m",
        "Sources/**/*.swift",
    ]),
    platforms = {"ios": "10.0"},
    private_headers = glob(["Sources/Internal/**/*.h"]),
    swift_version = "5.2",
    visibility = ["//visibility:public"],
    deps = ["//Frameworks/a:A"],
)

ios_unit_test(
    name = "B-Unit-Tests",
    srcs = glob([
        "Tests/**/*.h",
        "Tests/**/*.m",
        "Tests/**/*.swift",
    ]),
    bundle_id = select({
        "//Pods/cocoapods-bazel:debug": "org.cocoapods.B-Test.Debug",
        "//Pods/cocoapods-bazel:release": "org.cocoapods.B-Test",
    }),
    minimum_os_version = "10.0",
    module_name = "B_Unit_Tests",
    swift_version = "5.2",
    xcconfig_by_build_setting = {
        "//Pods/cocoapods-bazel:debug": {"PRODUCT_BUNDLE_IDENTIFIER": "org.cocoapods.B-Test.Debug"},
        "//Pods/cocoapods-bazel:release": {"PRODUCT_BUNDLE_IDENTIFIER": "org.cocoapods.B-Test"},
    },
    deps = [":B"],
)

ios_application(
    name = "B-App",
    srcs = glob([
        "App/**/*.h",
        "App/**/*.m",
        "App/**/*.swift",
    ]),
    bundle_id = select({
        "//Pods/cocoapods-bazel:debug": "org.cocoapods.B-App.Debug",
        "//Pods/cocoapods-bazel:release": "org.cocoapods.B-App",
    }),
    entitlements = select({
        "//Pods/cocoapods-bazel:debug": "Resources/debug.entitlements",
        "//Pods/cocoapods-bazel:release": "Resources/release.entitlements",
    }),
    families = [
        "iphone",
        "ipad",
    ],
    infoplists_by_build_setting = {
        "//Pods/cocoapods-bazel:debug": "Resources/debug.plist",
        "//Pods/cocoapods-bazel:release": "Resources/release.plist",
    },
    minimum_os_version = "10.0",
    module_name = "B_App",
    objc_copts = select({
        "//Pods/cocoapods-bazel:debug": ["-I/Headers/Private/Debug"],
        "//Pods/cocoapods-bazel:release": ["-I/Headers/Private/Release"],
    }) + [
        "-Wno-conversion",
        "-Wno-error=at-protocol",
    ],
    swift_copts = select({
        "//Pods/cocoapods-bazel:debug": [
            "-Xcc",
            "-I/Headers/Private/Debug",
        ],
        "//Pods/cocoapods-bazel:release": [
            "-Xcc",
            "-I/Headers/Private/Release",
        ],
    }),
    swift_version = "5.2",
    xcconfig_by_build_setting = {
        "//Pods/cocoapods-bazel:debug": {
            "INFOPLIST_FILE": "Resources/debug.plist",
            "CODE_SIGN_ENTITLEMENTS": "Resources/debug.entitlements",
            "PRODUCT_BUNDLE_IDENTIFIER": "org.cocoapods.B-App.Debug",
        },
        "//Pods/cocoapods-bazel:release": {
            "INFOPLIST_FILE": "Resources/release.plist",
            "CODE_SIGN_ENTITLEMENTS": "Resources/release.entitlements",
            "PRODUCT_BUNDLE_IDENTIFIER": "org.cocoapods.B-App",
        },
    },
    deps = [":B"],
)
