load("@build_bazel_rules_ios//rules:app.bzl", "ios_application")
load("@build_bazel_rules_ios//rules:framework.bzl", "apple_framework")
load("@build_bazel_rules_ios//rules:test.bzl", "ios_unit_test")

apple_framework(
    name = "B",
    srcs = glob([
        "Sources/**/*.h",
        "Sources/**/*.m",
        "Sources/**/*.swift",
    ]),
    platforms = {"ios": "11.0"},
    private_headers = glob(["Sources/Internal/**/*.h"]),
    swift_version = "5.2",
    visibility = ["//visibility:public"],
    deps = ["//Frameworks/a:A"],
)

ios_unit_test(
    name = "B-Unit-Tests",
    srcs = glob([
        "Tests/**/*.h",
        "Tests/**/*.m",
        "Tests/**/*.swift",
    ]),
    bundle_id = select({
        "//Pods/cocoapods-bazel:debug": "org.cocoapods.B-Test.Debug",
        "//Pods/cocoapods-bazel:release": "org.cocoapods.B-Test",
    }),
    minimum_os_version = "11.0",
    module_name = "B_Unit_Tests",
    swift_version = "5.2",
    xcconfig = {
        "PRODUCT_BUNDLE_IDENTIFIER_Debug": "org.cocoapods.B-Test.Debug",
        "PRODUCT_BUNDLE_IDENTIFIER_Release": "org.cocoapods.B-Test",
    },
    xcconfig_by_build_setting = {
        "//Pods/cocoapods-bazel:debug": {"PRODUCT_BUNDLE_IDENTIFIER": "org.cocoapods.B-Test.Debug"},
        "//Pods/cocoapods-bazel:release": {"PRODUCT_BUNDLE_IDENTIFIER": "org.cocoapods.B-Test"},
    },
    deps = [":B"],
)

ios_application(
    name = "B-App",
    srcs = glob([
        "App/**/*.h",
        "App/**/*.m",
        "App/**/*.swift",
    ]),
    bundle_id = select({
        "//Pods/cocoapods-bazel:debug": "org.cocoapods.B-App.Debug",
        "//Pods/cocoapods-bazel:release": "org.cocoapods.B-App",
    }),
    entitlements = select({
        "//Pods/cocoapods-bazel:debug": "Resources/debug.entitlements",
        "//Pods/cocoapods-bazel:release": "Resources/release.entitlements",
    }),
    families = [
        "iphone",
        "ipad",
    ],
    infoplists_by_build_setting = {
        "//Pods/cocoapods-bazel:debug": ["Resources/debug.plist"],
        "//Pods/cocoapods-bazel:release": ["Resources/release.plist"],
    },
    minimum_os_version = "11.0",
    module_name = "B_App",
    objc_copts = select({
        "//Pods/cocoapods-bazel:debug": ["-I/Headers/Private/Debug"],
        "//Pods/cocoapods-bazel:release": ["-I/Headers/Private/Release"],
    }) + [
        "-Wno-conversion",
        "-Wno-error=at-protocol",
    ],
    swift_copts = select({
        "//Pods/cocoapods-bazel:debug": [
            "-Xcc",
            "-I/Headers/Private/Debug",
        ],
        "//Pods/cocoapods-bazel:release": [
            "-Xcc",
            "-I/Headers/Private/Release",
        ],
    }),
    swift_version = "5.2",
    xcconfig = {
        "HEADER_SEARCH_PATHS_Debug": "/Headers/Private/Debug",
        "HEADER_SEARCH_PATHS_Release": "/Headers/Private/Release",
        "INFOPLIST_FILE_Debug": "Resources/debug.plist",
        "INFOPLIST_FILE_Release": "Resources/release.plist",
        "CODE_SIGN_ENTITLEMENTS_Debug": "Resources/debug.entitlements",
        "CODE_SIGN_ENTITLEMENTS_Release": "Resources/release.entitlements",
        "PRODUCT_BUNDLE_IDENTIFIER_Debug": "org.cocoapods.B-App.Debug",
        "PRODUCT_BUNDLE_IDENTIFIER_Release": "org.cocoapods.B-App",
    },
    xcconfig_by_build_setting = {
        "//Pods/cocoapods-bazel:debug": {
            "INFOPLIST_FILE": "Resources/debug.plist",
            "CODE_SIGN_ENTITLEMENTS": "Resources/debug.entitlements",
            "PRODUCT_BUNDLE_IDENTIFIER": "org.cocoapods.B-App.Debug",
        },
        "//Pods/cocoapods-bazel:release": {
            "INFOPLIST_FILE": "Resources/release.plist",
            "CODE_SIGN_ENTITLEMENTS": "Resources/release.entitlements",
            "PRODUCT_BUNDLE_IDENTIFIER": "org.cocoapods.B-App",
        },
    },
    deps = [":B"],
)

ios_application(
    name = "B-DebuggableOnlyApp",
    srcs = glob([
        "App/**/*.h",
        "App/**/*.m",
        "App/**/*.swift",
    ]),
    bundle_id = select({
        "//Pods/cocoapods-bazel:debug": "org.cocoapods.B-DebuggableOnlyApp.Debug",
        "//Pods/cocoapods-bazel:release": "org.cocoapods.B-DebuggableOnlyApp",
    }),
    entitlements = select({
        "//Pods/cocoapods-bazel:debug": "Resources/debug.entitlements",
        "//Pods/cocoapods-bazel:release": None,
    }),
    families = [
        "iphone",
        "ipad",
    ],
    infoplists_by_build_setting = {
        "//Pods/cocoapods-bazel:debug": ["Resources/debug.plist"],
        "//Pods/cocoapods-bazel:release": ["Resources/release.plist"],
    },
    minimum_os_version = "11.0",
    module_name = "B_DebuggableOnlyApp",
    objc_copts = select({
        "//Pods/cocoapods-bazel:debug": ["-I/Headers/Private/Debug"],
        "//Pods/cocoapods-bazel:release": ["-I/Headers/Private/Release"],
    }) + [
        "-Wno-conversion",
        "-Wno-error=at-protocol",
    ],
    swift_copts = select({
        "//Pods/cocoapods-bazel:debug": [
            "-Xcc",
            "-I/Headers/Private/Debug",
        ],
        "//Pods/cocoapods-bazel:release": [
            "-Xcc",
            "-I/Headers/Private/Release",
        ],
    }),
    swift_version = "5.2",
    xcconfig = {
        "HEADER_SEARCH_PATHS_Debug": "/Headers/Private/Debug",
        "HEADER_SEARCH_PATHS_Release": "/Headers/Private/Release",
        "INFOPLIST_FILE_Debug": "Resources/debug.plist",
        "INFOPLIST_FILE_Release": "Resources/release.plist",
        "CODE_SIGN_ENTITLEMENTS_Debug": "Resources/debug.entitlements",
        "PRODUCT_BUNDLE_IDENTIFIER_Debug": "org.cocoapods.B-DebuggableOnlyApp.Debug",
        "PRODUCT_BUNDLE_IDENTIFIER_Release": "org.cocoapods.B-DebuggableOnlyApp",
    },
    xcconfig_by_build_setting = {
        "//Pods/cocoapods-bazel:debug": {
            "INFOPLIST_FILE": "Resources/debug.plist",
            "CODE_SIGN_ENTITLEMENTS": "Resources/debug.entitlements",
            "PRODUCT_BUNDLE_IDENTIFIER": "org.cocoapods.B-DebuggableOnlyApp.Debug",
        },
        "//Pods/cocoapods-bazel:release": {
            "INFOPLIST_FILE": "Resources/release.plist",
            "CODE_SIGN_ENTITLEMENTS": "",
            "PRODUCT_BUNDLE_IDENTIFIER": "org.cocoapods.B-DebuggableOnlyApp",
        },
    },
    deps = [":B"],
)
