"""
Test docstring
that takes two lines
"""

load("@build_bazel_rules_ios//rules:app.bzl", "ios_application")
load("@build_bazel_rules_ios//rules:framework.bzl", "apple_framework")
load("@build_bazel_rules_ios//rules:test.bzl", "ios_unit_test")

apple_framework(
    name = "D",
    srcs = glob([
        "Sources/**/*.h",
        "Sources/**/*.m",
        "Sources/**/*.swift",
    ]),
    platforms = {"ios": "11.0"},
    private_headers = glob(["Sources/Internal/**/*.h"]),
    swift_version = "5.2",
    visibility = ["//visibility:public"],
    deps = [
        "//Frameworks/a:A",
        "//Frameworks/c:C",
        "//Pods/Public",
    ],
)

ios_unit_test(
    name = "D-Unit-Tests",
    srcs = glob([
        "Tests/**/*.h",
        "Tests/**/*.m",
        "Tests/**/*.swift",
    ]),
    infoplists = [
        {
            "COCOAPODS_BAZEL_TEST_INFO_PLIST_KEY": True,
            "COCOAPODS_BAZEL_TEST_INFO_PLIST_KEY_2": "KEY_2",
        },
    ],
    minimum_os_version = "11.0",
    module_name = "D_Unit_Tests",
    swift_version = "5.2",
    test_host = ":D-App",
    deps = [
        ":D",
        "//Frameworks/e:E",
    ],
)

ios_application(
    name = "D-App",
    srcs = glob([
        "App/**/*.h",
        "App/**/*.m",
        "App/**/*.swift",
    ]),
    bundle_id = "org.cocoapods.D-App",
    families = ["ipad"],
    infoplists = [
        {
            "COCOAPODS_BAZEL_TEST_INFO_PLIST_KEY": True,
            "COCOAPODS_BAZEL_TEST_INFO_PLIST_KEY_2": "KEY_2",
        },
    ],
    minimum_deployment_os_version = "11.0",
    minimum_os_version = "9.0",
    module_name = "D_App",
    swift_version = "5.2",
    visibility = ["//visibility:public"],
    xcconfig = {
        "TARGETED_DEVICE_FAMILY": "2",
        "SWIFT_PLATFORM_TARGET_PREFIX": "ios",
        "SWIFT_DEPLOYMENT_TARGET": "9.0",
        "LLVM_TARGET_TRIPLE_OS_VERSION": "ios9.0",
    },
    deps = [":D"],
)
