load("@build_bazel_rules_ios//rules:framework.bzl", "apple_framework")
load("@build_bazel_rules_ios//rules:test.bzl", "ios_unit_test")

apple_framework(
    name = "E",
    srcs = glob([
        "Sources/**/*.h",
        "Sources/**/*.m",
        "Sources/**/*.swift",
    ]),
    platforms = {"ios": "10.0"},
    private_headers = glob(["Sources/Internal/**/*.h"]),
    swift_version = "5.2",
    visibility = ["//visibility:public"],
    deps = [
        "//Frameworks/a:A",
        "//Frameworks/c:C",
    ],
)

ios_unit_test(
    name = "E-Unit-Tests",
    srcs = glob([
        "Tests/**/*.h",
        "Tests/**/*.m",
        "Tests/**/*.swift",
    ]),
    minimum_os_version = "10.0",
    module_name = "E_Unit_Tests",
    swift_version = "5.2",
    deps = [":E"],
)
