load("@build_bazel_rules_ios//rules:app.bzl", "ios_application")
load("@build_bazel_rules_ios//rules:framework.bzl", "apple_framework")
load("@build_bazel_rules_ios//rules:test.bzl", "ios_unit_test")

apple_framework(
    name = "F",
    srcs = glob([
        "Sources/**/*.h",
        "Sources/**/*.m",
        "Sources/**/*.swift",
    ]),
    platforms = {"ios": "10.0"},
    private_headers = glob(["Sources/Internal/**/*.h"]),
    swift_version = "5.2",
    visibility = ["//visibility:public"],
    deps = select({
        ":debug": ["//Frameworks/c:C", "//Pods/OnlyPre"]
        ":release": ["//Frameworks/c:C"],
        "//conditions:default": ["//Frameworks/c:C"],
    }),
)

config_setting(
    name = "debug",
    values = {"config": "debug"},
)

config_setting(
    name = "release",
    values = {"config": "release"},
)

ios_unit_test(
    name = "F-Unit-Tests",
    srcs = glob([
        "Tests/**/*.h",
        "Tests/**/*.m",
        "Tests/**/*.swift",
    ]),
    minimum_os_version = "10.0",
    module_name = "F_Unit_Tests",
    swift_version = "5.2",
    deps = [":F"],
)

ios_application(
    name = "F-App",
    srcs = glob([
        "App/**/*.h",
        "App/**/*.m",
        "App/**/*.swift",
    ]),
    bundle_id = "org.cocoapods.F-App",
    families = [
        "iphone",
        "ipad",
    ],
    minimum_os_version = "10.0",
    module_name = "F_App",
    swift_version = "5.2",
    deps = [":F"],
)
